--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit>=1.37.0
-pandas>=2.2.0
-numpy>=1.26.0
-matplotlib>=3.8.0
-seaborn>=0.13.0
-scikit-learn>=1.4.0
-xgboost>=2.0.0
-holidays>=0.46
-pytz>=2024.1
+streamlit==1.34.0
+pandas==2.2.3
+numpy==1.26.4
+matplotlib==3.10.0
+seaborn==0.13.2
+scikit-learn==1.6.1
+xgboost==2.0.3
+holidays==0.46
+joblib==1.4.2
+pytz==2024.1
